test/error/localparam_no_default.sv
// pattern: localparam "X" has no default value
module top;
    localparam X;
endmodule
